# swiftgraph

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  P3_PLAN.md  README.md  WORKLOG.md  swift-codegraph-mcp-spec.md
.github/workflows/: ci.yml
Formula/: swiftgraph.rb
crates/swiftgraph-audit/: Cargo.toml
crates/swiftgraph-audit/src/: engine.rs  lib.rs  runner.rs
crates/swiftgraph-audit/src/output/: mod.rs
crates/swiftgraph-audit/src/rules/: accessibility.rs  codable.rs  concurrency.rs  energy.rs  memory.rs  mod.rs  modernization.rs  networking.rs  performance.rs  security.rs  storage.rs  swiftui_arch.rs  swiftui_perf.rs  testing.rs
crates/swiftgraph-core/: Cargo.toml
crates/swiftgraph-core/benches/: indexing.rs
crates/swiftgraph-core/src/: config.rs  lib.rs
crates/swiftgraph-core/src/analysis/: architecture.rs  boundaries.rs  complexity.rs  context.rs  coupling.rs  cycles.rs  dead_code.rs  diff_impact.rs  impact.rs  imports.rs  mod.rs
crates/swiftgraph-core/src/graph/: edge.rs  mod.rs  node.rs
crates/swiftgraph-core/src/index_store/: ffi.rs  mod.rs  reader.rs
crates/swiftgraph-core/src/pipeline/: mod.rs
crates/swiftgraph-core/src/project/: mod.rs
crates/swiftgraph-core/src/storage/: mod.rs  queries.rs  schema.rs
crates/swiftgraph-core/src/swift_syntax/: mod.rs
crates/swiftgraph-core/src/tree_sitter/: mod.rs  parser.rs
crates/swiftgraph-core/tests/: integration_test.rs  proptest_graph.rs  test_helpers.rs
crates/swiftgraph-core/tests/fixtures/basic/Sources/: Extensions.swift  Models.swift  Services.swift  ViewModel.swift
crates/swiftgraph-core/tests/fixtures/concurrency/Sources/: Actors.swift
crates/swiftgraph-mcp/: Cargo.toml
crates/swiftgraph-mcp/src/: lib.rs  main.rs  server.rs
crates/swiftgraph-mcp/src/tools/: concurrency.rs  mod.rs  navigation.rs  status.rs
crates/swiftgraph-mcp/tests/: tool_tests.rs
crates/swiftgraph-parser/: Package.swift
crates/swiftgraph-parser/Sources/SwiftGraphParser/: ASTVisitor.swift  Models.swift  main.swift
scripts/: release.sh
